--- a/contacte.html
+++ b/contacte.html
@@ -7,6 +7,33 @@
    </head>
    
    <body>
+    <h1 id="titol" >Contacte</h1>
+    <p>
+        Com a dissenyador web, transformo idees en pàgines web intuïtives i visualment <br>
+        impactants. M'apassiona combinar creativitat i funcionalitat perquè cada projecte <br>
+        destaqui en el món digital.
+    </p>
+
+    <br>
+    <p>Dades sobre mi:</p> 
+    <ul>
+        <li>He creat més de 25 pàgines web per a diferents clients.</li>
+        <li>Domino HTML, CSS, JavaScript i WordPress.</li>
+        <li>M'especialitzo en disseny web responsive i modern.</li>
+    </ul>
+    <br>
+    <p>Els meus objectius d´aprenentatge:</p>
+    <ol>
+        <li>Millorar contínuament les meves habilitats en disseny web i experiència d'usuari (UX).</li>
+        <li>Aprendre noves tecnologies i frameworks per crear pàgines web més dinàmiques.</li>
+        <li>Optimitzar la velocitat i l'accessibilitat de totes les meves pàgines web.</li>
+    </ol>
+
+    <a href="indedx.html" target="_blank">
+        <br>
+        Tornar a la pàgina principal
+        <br>
+    </a>
 
    </body>
 </html>
