--- a/indedx.html
+++ b/indedx.html
@@ -5,6 +5,7 @@
        <title>CSS bàsic</title>
        <link rel="stylesheet" href="stils.css">
    </head>
+
    <style>
     li#linea {color: #ff0000;}
     li#dins {color: green;}   
@@ -12,12 +13,17 @@
     a:hover {color: rgb(255, 0, 225);}
     a:hover {border-bottom-style: pointer;}
    </style>
+
    <body>
-    <h1 id="titol" >Benvinguts a CSS bàsic.</h1>
-    <p class="text-important">CSS (Cascading Style Sheets) és un lletguatge que serveix per definir <br>
-        l´aspecte visual dels documents HTML com podeu ser (colors, mmides, marges, etc.) de una pàgina web.</p>
+        <h1 id="titol" >Benvinguts a CSS bàsic.</h1>
+
+        <p class="text-important">
+            CSS (Cascading Style Sheets) és un lletguatge que serveix per definir <br>
+            l´aspecte visual dels documents HTML com podeu ser (colors, mmides, marges, etc.) de una pàgina web.
+        </p>
         <br>
-        <p class="gran negreta subrallat"></p>
+
+        <p class="gran negreta subrallat"> CSS (CASCADING STYLE SHEETS)</p>
 
         <p>Maneres princials d´afegir CSS en una Página Web</p>
         <ul>
@@ -35,7 +41,6 @@
         <br>
         Contacte amb mi
         <br>
-    </a>
-
+        </a>
    </body>
 </html>
