--- a/contacte.html
+++ b/contacte.html
@@ -29,7 +29,7 @@
         <li>Optimitzar la velocitat i l'accessibilitat de totes les meves pàgines web.</li>
     </ol>
 
-    <a href="indedx.html" target="_blank">
+    <a href="index.html" target="_blank">
         <br>
         Tornar a la pàgina principal
         <br>
