--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         </p>
         <br>
 
-        <p class="gran negreta subrallat"> CSS (CASCADING STYLE SHEETS)</p>
+        <p class="gran negreta subratllat">CSS (CASCADING STYLE SHEETS)</p>
 
         <p>Maneres princials d´afegir CSS en una Página Web</p>
+
         <ul>
             <li id="linea">CSS en línea</li>
             <li id="dins">CSS dins del document</li>
@@ -38,9 +39,9 @@
         <br>
 
         <a href="contacte.html" target="_blank">
-        <br>
-        Contacte amb mi
-        <br>
+            <br>
+            Contacte amb mi
+            <br>
         </a>
    </body>
 </html>
